--- a/cart.html
+++ b/cart.html
@@ -3,34 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>cart</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <title>Cart </title>
     <link rel="stylesheet" href="css/all.css">
+    <link rel="stylesheet" href="css/style_cart.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    
 </head>
 <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="loggedin.html">
+            <a class="navbar-brand" href="#">
                 <img src="images/accessories/E__1_-removebg-preview.png" alt="logo" height="80">
             </a>
-        </div>
-        <div class="ms-auto d-flex align-items-center">
-            <li class="nav-item dropdown" style="list-style: none;">
-                <a class="nav-link" href="#" role="button" id="cartDropdown">
-                    <i class="fas fa-shopping-cart"></i> <span id="cartCount">0</span>
-                </a>
-                <div id="cartDropdownMenu" class="dropdown-menu cart-dropdown">
-                    <div id="cartDropdownItems"></div>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="cart.html">View All Products</a>
-                </div>
-            </li>
-            <span id="usernameDisplay" class="mx-3"></span>
-            <button onclick="logout()" class="btn btn-outline-danger mx-3 ">Logout</button>
-        </div>
-    </nav>
+            <div class="ms-auto d-flex align-items-center">
+                <li class="nav-item dropdown" style="list-style: none;">
+                    <a href="#" class="nav-link" role="button" id="cartDropdown">
+                        <i class="fas fa-shopping-cart"></i><span id="cartCount">0</span>
+                    </a>
+                    <div id="cartDropdownMenu" class="dropdown-menu cart-dropdown">
+                        <div id="cartDropdownItems"></div>
+                        <div class="dropdown-divider"></div>
+                        <a href="cart.html" class="dropdown-item">View All Products</a>
+                    </div>
+                  </li>
+                <span id="usernameDisplay" class="mx-3"></span>
+              <button onclick="logout()" class="btn btn-outline-danger ms-3">Logout</button>
+            </div>        
+    </nav> 
     <!-- Cart Items -->
     <div class="container mt-5">
         <div class="row align-items-center" id="cart-items">
